# scootradio.com

./: README.md  docker-compose.yml
api/: .env.sample  Dockerfile  README.md  requirements.txt
api/src/: models.py  settings.py  urls.py  validator.py  views.py
api/src/migrations/: 0001_initial.py
api/src/seed/: radio_stations.json
app/: .env.sample  .gitignore  Dockerfile  README.md  package.json
app/public/: manifest.json  robots.txt
app/src/components/hls-player/: hls-player.tsx
app/src/components/layout/: layout.tsx
app/src/components/radio/: radio-station-block.component.tsx
app/src/config/: react-query-client.ts
app/src/data/: axios-config.ts
app/src/data/health/: use-health.ts
app/src/data/radio-stations/: use-radio-stations.ts
app/src/pages/: _app.tsx  _document.tsx  index.tsx
app/src/pages/dashboard/: index.tsx
app/src/pages/debug/: index.tsx
app/src/state/local/: use-new-local-settings.ts
app/src/styles/: global.css
app/src/types/health/: health-check-response.type.ts
app/src/types/radio/: radio-station.type.ts
backend/: .env.sample  .gitignore  Dockerfile  Dockerfile_OLD  Makefile  README.md  alembic.ini  mypy.ini  pyproject.toml
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 01a7d2c14ac7_add_radio_station.py  0313f809008e_add_radio_station_playlist_columns.py  0a5a8faf2463_remove_playlist_type.py  2752e073052a_add_radio_station_seo_fields.py  7b80750833db_add_kexp_playlist_type.py  9ce480b0af96_add_starting_volume.py  eb62494eee8d_add_display_name_index.py  f98303e42941_remove_starting_volume.py
backend/app/api/: dependencies.py
backend/app/api/middlewares/: session_middleware.py
backend/app/api/routes/: health.py  radio_stations.py  root.py
backend/app/base/dtos/: health_check.py
backend/app/base/routes/: root.py
backend/app/core/: config.py  constants.py  db.py  dependencies.py  fast_api_handlers.py  request_logging.py
backend/app/dtos/: radio_station.py
backend/app/enums/: radio_station_playlist_type.py
backend/app/models/: __init__.py  radio_station.py
backend/app/radio_stations/dtos/: now_playing.py  radio_station.py
backend/app/radio_stations/enums/: radio_station_name.py
backend/app/radio_stations/models/: radio_station.py
backend/app/radio_stations/now_playing/: kexp_now_playing.py  now_playing_base.py  now_playing_mapper.py  spinitron_now_playing.py
backend/app/radio_stations/routes/: radio_stations.py
backend/app/utils/: kexp_scraping.py  spinitron_scraping.py
backend/scripts/: create_migration.py  lint.py  migrate.py  migrate_down.py  prestart.py  seed.py  start.py  wait_db.py
frontend/: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  eslint.config.mjs  eslint.config.ts  next.config.ts  package-lock.json  package.json  prettier.config.js  prettier.config.ts  tailwind.config.ts
frontend/public/: robots.txt  sitemap.xml
frontend/src/api/: api-url-constants.ts  fetch-error.type.ts
frontend/src/app/: layout.tsx  manifest.ts  not-found.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/config/: app-settings.ts  axios-instance.ts  react-query-instance.ts  theme.ts
frontend/src/constants/: page-urls.ts
frontend/src/global-state/: favorite-stations-state.ts  radio-player-state.ts
(+59 files in other folders)
