[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["trentprynn <trentprynn@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
start = "scripts.start:main"
lint = "scripts.lint:main"
create-migration = "scripts.create_migration:main"
migrate = "scripts.migrate:main"
migrate-down = "scripts.migrate_down:main"
seed = "scripts.seed:main"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
asyncpg = "0.30.0"
httpx = "0.28.1"
sqlalchemy = { version = "2.0.43", extras = ["asyncio"] }
alembic = "1.16.4"
aiocache = "0.12.3"
hypercorn = "0.17.3"
fastapi = "0.116.1"
pydantic = "2.11.7"
pydantic-settings = "2.10.1"
tenacity = "9.1.2"
structlog = "25.4.0"
beautifulsoup4 = "4.13.4"
redis = "6.4.0"
pendulum = "3.1.0"

[tool.poetry.group.dev.dependencies]
mypy = "1.17.1"
ruff = "0.12.9"
types-beautifulsoup4 = "4.12.0.20250516"
types-requests = "2.32.4.20250809"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-exclude = ["alembic"]

[tool.mypy]
plugins = ['pydantic.mypy']
