[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["trentprynn <trentprynn@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
start = "scripts.start:main"
lint = "scripts.lint:main"
create-migration = "scripts.create_migration:main"
migrate = "scripts.migrate:main"
migrate-down = "scripts.migrate_down:main"
seed = "scripts.seed:main"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
asyncpg = "0.31.0"
httpx = "0.28.1"
sqlalchemy = { version = "2.0.44", extras = ["asyncio"] }
alembic = "1.17.2"
aiocache = "0.12.3"
hypercorn = "0.18.0"
fastapi = "0.124.0"
pydantic = "2.12.5"
pydantic-settings = "2.12.0"
tenacity = "9.1.2"
structlog = "25.5.0"
beautifulsoup4 = "4.14.3"
redis = "7.1.0"
pendulum = "3.1.0"

[tool.poetry.group.dev.dependencies]
mypy = "1.19.0"
ruff = "0.14.8"
types-beautifulsoup4 = "4.12.0.20250516"
types-requests = "2.32.4.20250913"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-exclude = ["alembic"]

[tool.mypy]
plugins = ['pydantic.mypy']
