[project]
name = "app"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "asyncpg==0.31.0",
    "httpx==0.28.1",
    "sqlalchemy[asyncio]==2.0.49",
    "alembic==1.18.4",
    "aiocache==0.12.3",
    "hypercorn==0.18.0",
    "fastapi==0.136.1",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "tenacity==9.1.4",
    "structlog==25.5.0",
    "beautifulsoup4==4.14.3",
    "redis==7.4.0",
    "pendulum==3.2.0",
]

[project.scripts]
start = "scripts.start:main"
lint = "scripts.lint:main"
create-migration = "scripts.create_migration:main"
migrate = "scripts.migrate:main"
migrate-down = "scripts.migrate_down:main"
seed = "scripts.seed:main"

[dependency-groups]
dev = [
    "mypy==2.1.0",
    "ruff==0.15.13",
    "types-beautifulsoup4==4.12.0.20250516",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-exclude = ["alembic"]

[tool.mypy]
plugins = ['pydantic.mypy']
